# lumi

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
example/discord_bot/: README.md  main.py
example/happy_aigen/: README.md  main.py  setting.yaml  user_system.py
example/happy_aigen/game_controller/: __init__.py  admin.py  commands.py  discord_helper.py  user.py
example/happy_aigen/pixel_enigma/: __init__.py  commands.py  game_system.py
example/happy_aigen/tests/game_controller/: user_test.py
example/happy_aigen/tests/pixel_enigma/: commands_test.py
example/happy_aigen/utils/: configs.py  discord_helper.py  fields.py  storage.py
src/lm/: __init__.py  llama_cpp_runner.py
src/lumi/: __init__.py  agent.py  configs.py  lm.py  session.py
tests/lm/: llama_cpp_runner_test.py
